--- a/Omnifood/resources/css/style.css
+++ b/Omnifood/resources/css/style.css
@@ -112,6 +112,38 @@ h2:after {
     margin-bottom:10px;
 }
 
+.icon-small {
+    display:inline-block;
+    width:30px;
+    text-align: center;
+    color:#e67e22;
+    font-size: 120%;
+    /*----secret to align text and icons ---------*/
+    line-height: 120%;
+    vertical-align: middle;
+    margin-top:-5px;
+}
+/*-------------------------------*/
+/* Generic links*/
+/*-------------------------------*/
+
+a:link, a:visited{
+    color:#e67e22;
+    text-decoration: none;
+    padding-bottom:1px;
+    border-bottom: 1px solid  #e67e22;
+    transition: border-bottom 0.2s, color 0.2s;
+
+}
+
+
+
+a:hover, a:active{
+    color:#555;
+    border-bottom: 1px solid  transparent;
+
+}
+
 
 /*-------------------------------*/
 /* Buttons*/
@@ -163,6 +195,7 @@ h2:after {
 
 header {
     background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url(img/hero.jpg);
+    background-attachment: fixed;
     background-size: cover;
     background-position: center;
     height: 100vh;
@@ -288,10 +321,73 @@ margin-top:70px;
     margin-right:25px;
 }
 
-
+.btn-app:link, btn-app:visited{
+    border:0;
+}
 
 .btn-app img{
  height:50px;
  width:auto;
  margin-right:10px;
+}
+
+
+
+/*-------------------------------*/
+/* cities*/
+/*-------------------------------*/
+
+
+.box img{
+width:100%;
+height:auto;
+margin-bottom:15px;
+}
+
+.city-feature{
+    margin-bottom:5px;
+}
+
+
+/*-------------------------------*/
+/* testimonials*/
+/*-------------------------------*/
+
+.section-testimonials{
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/back-customers.jpg);
+    background-size: cover;
+    color:#fff;
+    background-attachment: fixed;
+}
+
+blockquote{
+    padding:2%;
+    font-style: italic;
+    line-height: 145%;
+    position: relative;
+    margin-top:40px;
+}
+
+
+blockquote:before{
+    content:"\201C";
+    font-size: 500%;
+    display:block;
+    position:absolute;
+    top:0px;
+    left:-3px; 
+}
+
+cite{
+    font-size:90%;
+    margin-top:25px;
+    display: block;
+
+}
+
+cite img {
+    height: 45px;
+    border-radius: 50%;
+    margin-right:10px; 
+    vertical-align: middle;
 }
