--- a/Omnifood/resources/css/style.css
+++ b/Omnifood/resources/css/style.css
@@ -149,7 +149,8 @@ a:hover, a:active{
 /* Buttons*/
 /*-------------------------------*/
 .btn:link,
-.btn:visited {
+.btn:visited,
+input[type=submit]{
     display: inline-block;
     padding: 10px 30px;
     font-weight: 300;
@@ -159,7 +160,8 @@ a:hover, a:active{
 }
 
 .btn-full:link,
-.btn-full:visited {
+.btn-full:visited,
+input[type=submit] {
     background-color: #e67e22;
     border: 1px solid #e67e22;
     color: #fff;
@@ -173,7 +175,9 @@ a:hover, a:active{
 }
 
 .btn:hover,
-.btn:active {
+.btn:active,
+input[type=submit]:hover,
+input[type=submit]:active {
     background-color: #cf6d17;
 }
 
@@ -449,3 +453,140 @@ cite img {
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
 }
+
+
+/*-------------------------------*/
+/* CONTACT FORM */
+/*-------------------------------*/
+
+.contact-form{
+width:60%;
+    margin:0 auto;
+}
+
+input[type=text],
+input[type=email],
+select,
+textarea {
+    width: 100%;
+    padding:7px;
+    border: 1px solid #ccc;
+    border-radius: 3px ;
+}
+
+input[type=checkbox]{
+    margin: 10px 5px 10px 0px;
+}
+
+*:focus{
+    outline:none;
+}
+
+
+
+/*-------------------------------*/
+/* Footer */
+/*-------------------------------*/
+
+footer{
+    background-color: #333333;
+    padding:50px;
+    font-size:80%;
+}
+
+.footer-nav{
+    list-style: none;
+    float:left;
+}
+
+.social-links{
+    list-style: none;
+float:right;
+}
+
+.footer-nav li,
+.social-links li{
+    display: inline-block;
+    margin-right: 20px;
+}
+
+.footer-nav li:last-child,
+.social-links li:last-child{
+    margin-right:0;
+}
+
+
+
+.footer-nav li a:link,
+.footer-nav li a:visited,
+.social-links li a:link,
+.social-links li a:visited{
+    text-decoration: none;
+    border:0;
+    color:#888;
+    transition: color 0.2s;
+}
+
+.footer-nav li a:hover,
+.footer-nav li a:active{
+    color:#ddd;
+}
+
+
+footer p{
+    color:#888;
+    text-align: center;
+    margin-top:30px;
+}
+
+
+.social-links li a:link,
+.social-links li a:visited{
+    font-size: 160%;
+
+
+}
+.ion-logo-facebook,
+.ion-logo-twitter,
+.ion-logo-googleplus,
+.ion-logo-instagram{
+    transition: color 0.2s;
+}
+
+
+.ion-logo-facebook:hover{
+    color:#3b5998;
+}
+
+
+.ion-logo-twitter:hover{
+    color:#00aced;
+}
+
+
+.ion-logo-googleplus:hover{
+    color:#dd4b39;
+}
+
+
+.ion-logo-instagram:hover{
+    color:#517fa4;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
